--- a/source/_static/scss/includes/_nav.scss
+++ b/source/_static/scss/includes/_nav.scss
@@ -371,25 +371,24 @@
 
 
 // ----------------------
-// Content nav
+// Platform nav
 // ----------------------
 .platform-nav {
 	background-color: var(--content-nav-bg);
 	font-size: $font-size-md;
-    z-index: 10;
     position: relative;
     box-shadow: 0 0.1875rem 0.375rem rgba($black, 0.15);
 
-    .container {
+    & > .container {
         white-space: nowrap;
         overflow-x: auto;
         display: flex;
         @include hide-scrollbars();
-    }
 
-	&:after {
-		background-image: linear-gradient(270deg, var(--content-nav-bg) 0%, var(--content-nav-bg) 10%, transparent 100%);
-	}
+		&:after {
+			background-image: linear-gradient(270deg, var(--content-nav-bg) 0%, var(--content-nav-bg) 10%, transparent 100%);
+		}
+    }
 }
 
 :root {
@@ -472,10 +471,9 @@
 };
 
 .platform-nav__dropdown {
-    z-index: 1;
     background-color: var(--content-nav-sub-bg);
     font-size: $font-size-sm;
-
+	
 	&:after {
 		background-image: linear-gradient(270deg, var(--content-nav-sub-bg) 0%, var(--content-nav-sub-bg) 10%, transparent 100%);
 	}
@@ -511,7 +509,7 @@
     }
 }
 
-.platform-nav,
+.platform-nav > .container,
 .platform-nav__dropdown {
 	position: relative;
 
@@ -523,7 +521,7 @@
 		width: 3rem;
 		height: 100%;
 		z-index: 1;
-		height: 2.8125rem;
+		height: 100%;
 		pointer-events: none;
 	}
 }
